--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,15 @@ pre {
   line-height: 1.3;
 }
 
+h1 {
+  margin-top: 0;
+}
+
+h1 span {
+  font-weight: 400;
+  margin-left: 1px;
+}
+
 h3 {
   text-transform: uppercase;
   font-weight: 600;
